--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cSpell.words": ["Leetcode"]
+    "cSpell.words": ["Leetcode"],
+    "files.associations": {
+        "functional": "cpp"
+    }
 }
